--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
     "web3": "^1.3.0"
   },
   "scripts": {
