--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@walletconnect/web3-provider": "^1.3.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
-    "web3": "^1.3.0"
+    "web3": "^1.3.0",
+    "web3connect": "^1.0.0-beta.33",
+    "web3modal": "^1.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
