--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "3.4.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
+    "validator": "^13.5.2",
     "web3": "^1.3.0",
     "web3connect": "^1.0.0-beta.33",
     "web3modal": "^1.9.2"
