--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@walletconnect/web3-provider": "^1.3.1",
     "emailjs-com": "^2.6.4",
+    "esm": "^3.2.25",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
@@ -23,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "mocha -r esm",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
