--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@walletconnect/web3-provider": "^1.3.1",
+    "axios": "^0.21.1",
+    "bignumber.js": "^9.0.1",
     "emailjs-com": "^2.6.4",
     "esm": "^3.2.25",
     "react": "^16.14.0",
